--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <header class="hero">
       <p class="badge">Moegal Honyaku</p>
       <h1>翻译配置</h1>
-      <p class="hero-text">切换翻译供应商与模式，改动会实时同步到后端。</p>
+      <p class="hero-text">切换翻译供应商与模式</p>
     </header>
 
     <section class="form-card">
